assets/style.css
/*FONT*/
@font-face {
    font-family: 'pp_neue_montrealbook';
    src: url('../assets/fonts/ppneuemontreal-book-webfont.woff2') format('woff2'),
         url('../assets/fonts/ppneuemontreal-book-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'pp_neue_montrealmedium';
    src: url('../assets/fonts/ppneuemontreal-medium-webfont.woff2') format('woff2'),
         url('../assets/fonts/ppneuemontreal-medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Tabular-Variable';
    src: url('../assets/fonts/Tabular-Variable.woff2') format('woff2'),
         url('../assets/fonts/Tabular-Variable.woff') format('woff');
         font-weight: 300 700;
         font-display: swap;
         font-style: normal;
}

:root
{
    --body-copy:16px;
    --body-copy-line-height: calc(var(--body-copy)*1.2);

    --desktop-copy: 18px;
    --desktop-copy-line-height:calc(var(--desktop-copy)*1.2);

/*   --navbar-copy:20px;
    --navbar-copy-line-height:calc(var(--navbar-copy)*1.2); */

    --media-copy:17px;
    --media-copy-line-height:calc(var(--media-copy)*1.2);
}


body
{
    margin: 0;
    font-family: 'pp_neue_montrealmedium';
    background-color: #1f1f1f;
    letter-spacing: 1px;
}

.sectionone
{
    display: flex;
    flex-direction: column;
    padding-bottom: 200px;
}

.description
{
    width: 85%;
    margin: auto;
    padding: auto;
    margin-top: 50px;
    color: white;
}

.description p {
    margin-bottom: 10px;
}

h1{
    margin-bottom: 20px;
}

.links{
    color: white;
    margin-top: 20px;
    margin-bottom: 20px;
}

a
{
    color: #3dff50;
    font-family: 'Tabular-Variable';
    font-weight: 500;
    letter-spacing: 0;
}

.work
{
    --columns: 1;
    --grid-gap: 1.5em;
    display: grid;
    grid-template-columns: repeat(var(--columns),1fr);
    gap: var(--grid-gap);
    justify-content: center;
    align-items: center;
}

img
{
    margin-top: 20px;
}

figcaption{
    color: white;
    width: 85%;
    margin: auto;
    padding: auto;
    margin-top: 10px;
}

/*MOBILE NAV*/
/* .mobile
{
    background-color:#1f1f1f;
        margin: 0;
        padding: 0;
        display: flex;
        position: fixed;
        bottom: 0;
        height: 100px;
        width: 100vw;
        justify-content: space-evenly;
        z-index: 99;
}

.tab1, .tab2
{
    display: flex;
    width: 50vw;
    align-items: center;
    justify-content: center;
    color: white;
    font-family: 'Tabular-Variable';
    font-size: var(--navbar-copy);
    line-height: var(--navbar-copy-line-height);
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.tab1
{
    background-color: #EA34F6;
    color: #1f1f1f;
} */

/*MEDIA QUERY*/

/*MOBILE LANDSCAPE TO IPAD PORTRAIT*/
@media screen and (min-width: 481px) and (max-width: 768px)
{
body
{
    width: 90%;
    margin: auto;
    padding: auto;
    font-size: var(--media-copy);
    line-height: var(--media-copy-line-height);
}

.description
{
    margin-bottom: 30px;
    width: 90%;
}

figcaption
{
    margin: 0;
}

.work
{
    --columns: 2;
    align-items: start;
    gap: calc(var(--grid-gap)*1.2);
    width: 90%;
    margin: auto;
    padding: auto;
}

figure
{
    margin-bottom: 20px;
}

img
{
    border-radius: 3px;
    margin-top: 0px;
    margin-bottom: 10px;
}
}

/*IPAD LANDSCAPE TO DESKTOP*/
@media screen and (min-width: 769px) and (max-width: 1023px)
{
    body
    {
        width: 90%;
        margin: auto;
        padding: auto;
        font-size: var(--media-copy);
        line-height: var(--media-copy-line-height);
    }

    .sectionone
    {
        flex-direction: row-reverse;
        margin-top: 50px;
    }
    
    .description
    {
        flex: 40%;
        margin-top: 0px;
    }
    
    figcaption
    {
        font-family: 'pp_neue_montrealbook';
        margin: 0;
    }

    .work
    {
        --columns: 1;
        align-items: start;
        flex: 60%;
        margin-right: 60px;
    }
    
    figure
    {
        margin-bottom: 20px;
    }
    
    img
    {
        border-radius: 5px;
        margin-top: 0px;
        margin-bottom: 10px;
    }
}
/*LARGE DESKTOPS*/
@media screen and (min-width: 1024px)
{
    body
    {
        width: 92%;
        margin: auto;
        padding: auto;
        font-size: var(--desktop-copy);
        line-height: var(--desktop-copy-line-height);
    }

    .sectionone
    {
        flex-direction: row-reverse;
        margin-top: 100px;
    }
    
    .description
    {
        font-family: 'pp_neue_montrealbook';
        flex: 25%;
        margin-top: 0px;
        letter-spacing: 2px;
    }

    .description p
    {
        margin-bottom: 20px;
    }

    h1
    {
        font-family: 'pp_neue_montrealmedium';
        margin-bottom: 30px;
    }
    
    figcaption
    {
        font-family: 'pp_neue_montrealbook';
        margin: 0;
    }

    .work
    {
        --columns: 3;
        align-items: start;
        gap: calc(var(--grid-gap)*1.5);
        flex: 75%;
        margin-right: 80px;
    }
    
    figure
    {
        margin-bottom: 30px;
    }
    
    img
    {
        border-radius: 5px;
        margin-top: 0px;
        margin-bottom: 10px;
    }

    img:hover
    {
        transform: scale(1.3);
    }

    a:hover 
    {
        color: #EA34F6;
    }
}

